# We-got-Claude-Code-at-Home

./: .gitignore  Cargo.toml  NEXT_STEPS.md  NOTES.md  README.md
src/: main.rs
src/agents/: gemini_agent.rs  mod.rs
src/lsp/: lsp.rs  mod.rs
