[package]
name = "We-Got-Claude-Code-At-Home"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
rig-core = "0.26.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
dotenv = "0.15.0"
tower-lsp = "0.20.0"
tree-sitter = "0.26.3"
tree-sitter-python = "0.25.0"
tree-sitter-javascript = "0.25.0"
tree-sitter-rust = "0.24.0"
